--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -37,7 +36,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-g
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
@@ -100,6 +99,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
